--- a/css/main.css
+++ b/css/main.css
@@ -115,11 +115,14 @@ nav a:hover {
    Author's custom styles
    ========================================================================== */
 .header-container {
-  margin-top: 40px;
+  margin-top: 0px;
+  background: rgba(255, 255, 255, 0.6);
+  padding: 20px 0;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.07);
 }
 .pixology-icn {
-  width: 193px;
-  height: 203px;
+  width: 100px;
+  height: 105px;
   background: url('../img/icn-pixology-medium.png') no-repeat;
   position: relative;
   margin: 0 auto;
@@ -144,18 +147,24 @@ nav a:hover {
   width: 168px;
 }
 .footer-container {
-  background: #fefefb;
-  border-top: 1px solid #d3d5bf;
+  background: rgba(255, 255, 255, 0.6);
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
   margin-top: -100px;
-  padding: 140px 0 0px 0;
+  padding: 90px 0 60px 0;
 }
 .footer-container.zoom {
   margin-top: 50px;
 }
 .footer-container footer {
-  color: white;
+  color: #333;
   padding: 20px 0;
   text-align: center;
+}
+.social-links a {
+  margin-left: 10px;
+}
+.social-links a:first-of-type {
+  margin-left: 0px;
 }
 /* ==========================================================================
    Media Queries
