adding screenshots and benefit sections

--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,58 @@ textarea {
   color: #000;
   padding: 0.2em 0;
 }
+/* ==========================================================================
+   Helper classes
+   ========================================================================== */
+.ir {
+  background-color: transparent;
+  border: 0;
+  overflow: hidden;
+  *text-indent: -9999px;
+}
+.ir:before {
+  content: "";
+  display: block;
+  width: 0;
+  height: 150%;
+}
+.hidden {
+  display: none !important;
+  visibility: hidden;
+}
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
+}
+.invisible {
+  visibility: hidden;
+}
+.clearfix:before,
+.clearfix:after {
+  content: " ";
+  display: table;
+}
+.clearfix:after {
+  clear: both;
+}
+.clearfix {
+  *zoom: 1;
+}
 /* ===== Initializr Styles ==================================================
    Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
    ========================================================================== */
@@ -132,8 +184,8 @@ nav a:hover {
 }
 .main-banner .img-device {
   float: left;
-  width: 280px;
-  margin-left: -160px;
+  width: 240px;
+  margin-left: -130px;
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
@@ -146,14 +198,28 @@ nav a:hover {
 .main-banner .btn-appstore {
   width: 168px;
 }
-.footer-container {
+.bottom-white {
   background: rgba(255, 255, 255, 0.6);
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   margin-top: -100px;
-  padding: 90px 0 60px 0;
+  padding-bottom: 120px;
 }
-.footer-container.zoom {
-  margin-top: 50px;
+.main-container .info-panel {
+  background: rgba(255, 255, 255, 0.6);
+  padding: 40px 10px 0px 10px;
+}
+.main-container .info-panel img {
+  width: 160px;
+  float: left;
+  margin-left: 10px;
+}
+.main-container .info-panel p {
+  overflow: hidden;
+  padding: 0 20px;
+}
+.footer-container {
+  background: rgba(255, 255, 255, 0.6);
+  padding: 40px 0 60px 0;
 }
 .footer-container footer {
   color: #333;
@@ -178,7 +244,7 @@ nav a:hover {
   }
   .main-banner .img-device {
     float: left;
-    width: 340px;
+    width: 300px;
     margin-left: -100px;
   }
   .main-banner .img-device.zoom {
@@ -218,14 +284,14 @@ nav a:hover {
 @media only screen and (min-width: 768px) {
   .main-banner h1 {
     font-size: 4.7em;
-    padding-top: 200px;
+    padding-top: 130px;
   }
   .main-banner {
     position: relative;
   }
   .main-banner .img-device {
     float: left;
-    width: auto;
+    width: 300px;
     margin-left: 0px;
   }
   .main-banner .img-device.zoom {
@@ -235,6 +301,16 @@ nav a:hover {
   }
   .main-banner .btn-appstore {
     width: 210px;
+  }
+  .main-container .info-panel {
+    float: left;
+    width: 46%;
+    padding: 40px 2%;
+  }
+  .main-container .info-panel img {
+    width: 250px;
+    float: left;
+    margin-left: 10px;
   }
   /* ====================
       WIDE: CSS3 Effects
@@ -271,58 +347,6 @@ nav a:hover {
   
     margin: 0 auto;
   }
-}
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-.ir {
-  background-color: transparent;
-  border: 0;
-  overflow: hidden;
-  *text-indent: -9999px;
-}
-.ir:before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 150%;
-}
-.hidden {
-  display: none !important;
-  visibility: hidden;
-}
-.visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  width: auto;
-}
-.invisible {
-  visibility: hidden;
-}
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table;
-}
-.clearfix:after {
-  clear: both;
-}
-.clearfix {
-  *zoom: 1;
 }
 /* ==========================================================================
    Print styles
