--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,9 @@ textarea {
   color: #000;
   padding: 0.2em 0;
 }
+p {
+  font-size: 0.9em;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -148,7 +151,7 @@ nav a:hover {
   padding: 30px 0;
 }
 .main-banner h1 {
-  font-size: 3.1em;
+  font-size: 2.5em;
   font-weight: 100;
   line-height: 1;
   padding-top: 70px;
@@ -204,18 +207,29 @@ nav a:hover {
   margin-top: -100px;
   padding-bottom: 120px;
 }
-.main-container .info-panel {
+.main-container .benefit-section {
   background: rgba(255, 255, 255, 0.6);
+}
+.main-container .benefit-section h2 {
+  font-size: 2.4em;
+  margin: 0px;
+  padding: 20px 3%;
+}
+.main-container .info-panel {
   padding: 40px 10px 0px 10px;
 }
 .main-container .info-panel img {
-  width: 160px;
+  width: 150px;
   float: left;
-  margin-left: 10px;
+  margin-left: -40px;
 }
-.main-container .info-panel p {
+.main-container .info-panel .text {
   overflow: hidden;
   padding: 0 20px;
+}
+.main-container .info-panel .text h3 {
+  margin-bottom: -10px;
+  font-weight: bold;
 }
 .footer-container {
   background: rgba(255, 255, 255, 0.6);
@@ -308,9 +322,12 @@ nav a:hover {
     padding: 40px 2%;
   }
   .main-container .info-panel img {
-    width: 250px;
+    width: 200px;
     float: left;
     margin-left: 10px;
+  }
+  .main-container .info-panel .text {
+    min-height: 250px;
   }
   /* ====================
       WIDE: CSS3 Effects
