--- a/css/main.less
+++ b/css/main.less
@@ -60,6 +60,9 @@ textarea {
     padding: 0.2em 0;
 }
 
+p {
+    font-size: 0.9em;
+}
 
 
 /* ==========================================================================
@@ -199,7 +202,7 @@ nav a:hover {
 }
 
 .main-banner h1 {
-    font-size: 3.1em;
+    font-size: 2.5em;
     font-weight: 100;
     line-height: 1;
     padding-top: 70px;
@@ -273,18 +276,34 @@ nav a:hover {
 }
 
 .main-container {
-    .info-panel {
+    .benefit-section {
         background: rgba(255,255,255,0.6);
+
+        h2 {
+            font-size: 2.4em;
+            margin: 0px;
+            padding: 20px 3%;
+        }
+    }
+
+    .info-panel {
+        
         padding: 40px 10px 0px 10px;
 
+
         img {
-            width: 160px;
+            width: 150px;
             float: left;
-            margin-left:10px;
+            margin-left:-40px;
         }
-        p {
+        .text {
             overflow: hidden;
             padding: 0 20px;
+
+            h3 {
+                margin-bottom:-10px;
+                font-weight: bold;
+            }
         }
     }
 }
@@ -311,9 +330,6 @@ nav a:hover {
         }
     }
 }
-
-
-
 
 
 
@@ -412,9 +428,13 @@ nav a:hover {
             padding: 40px 2%;
 
             img {
-                width: 250px;
+                width: 200px;
                 float: left;
                 margin-left:10px;
+            }
+
+            .text {
+                 min-height: 250px;
             }
         }
     }
