--- a/css/main.less
+++ b/css/main.less
@@ -228,6 +228,51 @@ nav a:hover {
    Author's custom styles
    ========================================================================== */
 
+/*-------- video modal ----------*/
+
+#modal {
+    display: block;
+    transition: all 700ms;
+    -webkit-transition: all 700ms; /* Safari */
+    position: fixed;
+}
+
+.modal-hide {
+    z-index: -10;
+    opacity: 0;
+}
+
+.modal-show {
+    opacity: 1;
+    z-index: 10;
+}
+
+.modal-bg {
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity:0.7;
+    position: fixed;
+    z-index: 10;
+}
+
+.video-embed {
+        z-index: 50;
+        position: fixed;
+        left:50%;
+        top:50%;
+        margin-left: -320px;
+        margin-top: -180px;
+        background: #000;
+        max-width: 100%;
+        -moz-box-shadow:    0px 2px 15px 0px rgba(0,0,0,0.8);
+        -webkit-box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.8);
+         box-shadow:         0px 2px 15px 0px rgba(0,0,0,0.8);
+    }
+
+
+/*--------------*/
+
 .header-container {
     margin-top: 0px;
     background: rgba(255, 255, 255, 0.6);
