--- a/css/main.css
+++ b/css/main.css
@@ -200,12 +200,16 @@ nav a:hover {
   left: 50%;
   top: 50%;
   margin-left: -320px;
-  margin-top: -180px;
+  margin-top: -240px;
   background: #000;
   max-width: 100%;
   -moz-box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.8);
   -webkit-box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.8);
   box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.8);
+}
+.video-embed video {
+  width: 100%    !important;
+  height: auto   !important;
 }
 /*--------------*/
 .header-container {
