adding play button for video

--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,9 @@ p {
 .clearfix {
   *zoom: 1;
 }
+.show-small {
+  display: inline-block;
+}
 /* ===== Initializr Styles ==================================================
    Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
    ========================================================================== */
@@ -155,6 +158,7 @@ nav a:hover {
   font-weight: 100;
   line-height: 1;
   padding-top: 70px;
+  margin-bottom: 0px;
 }
 .main aside {
   color: white;
@@ -172,11 +176,9 @@ nav a:hover {
 /*-------- video modal ----------*/
 #modal {
   display: block;
-  transition: all 700ms;
-  -webkit-transition: all 700ms;
-  /* Safari */
+  /*transition: all 700ms;
+    -webkit-transition: all 700ms; /* Safari */
 
-  position: fixed;
 }
 .modal-hide {
   z-index: -10;
@@ -206,10 +208,6 @@ nav a:hover {
   -moz-box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.8);
   -webkit-box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.8);
   box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.8);
-}
-.video-embed video {
-  width: 100%    !important;
-  height: auto   !important;
 }
 /*--------------*/
 .header-container {
@@ -293,8 +291,12 @@ nav a:hover {
    Media Queries
    ========================================================================== */
 @media only screen and (min-width: 480px) {
+  .show-small {
+    display: none;
+  }
   .main-banner h1 {
     font-size: 4em;
+    margin: .67em 0;
   }
   .main-banner {
     position: relative;
