--- a/css/main.less
+++ b/css/main.less
@@ -260,21 +260,34 @@ nav a:hover {
     z-index: 10;
 }
 
+.embed-container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 50;
+}
+
 .video-embed {
-        z-index: 50;
-        position: fixed;
-        left:50%;
-        top:50%;
-        margin-left: -320px;
-        margin-top: -240px;
+        position: relative;
         background: #000;
         max-width: 100%;
         -moz-box-shadow:    0px 2px 15px 0px rgba(0,0,0,0.8);
         -webkit-box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.8);
          box-shadow:         0px 2px 15px 0px rgba(0,0,0,0.8);
+         width: 640px;
+         margin:30px auto;
+
+         video {
+            max-width: 100%;
+         }
     }
 
-
+.btn-close {
+    position: absolute;
+    top:10px;
+    right: 10px;
+    z-index: 51;
+}
 /*--------------*/
 
 .header-container {
